Changes for the User Data API
