# routes/prompt_routes.go
@@ -12,5 +12,6 @@ func PromptRoutes(router *gin.Engine) {
 
 	router.GET("/initializ/v1/ai/prompts", controllers.GetPrompts(aIPromptRepo))
 	router.GET("/initializ/v1/ai/prompt/:promptId", controllers.GetPromptsByID(aIPromptRepo))
-	router.POST("/initializ/v1/ai/saveprompts", controllers.GetPromptsByID(aIPromptRepo))
+	router.POST("/initializ/v1/ai/saveprompts", controllers.SavePrompt(aIPromptRepo))
+	router.PUT("/initializ/v1/ai/updateprompt/:promptId", controllers.UpdatePromptById(aIPromptRepo))
 }
